udah responsive, overflow fixed, color pallete oke

--- a/src/pages/Majalah/Majalah.scss
+++ b/src/pages/Majalah/Majalah.scss
@@ -1,4 +1,6 @@
-@import '../../styles/responsive.scss';
+@import "../../styles/responsive.scss";
+@import "../../styles/fonts.scss";
+@import "../../styles/colorpalette.scss";
 
 .header-jumbotron {
   z-index: 1;
@@ -35,6 +37,7 @@
 }
 .outer-heaven {
   position: relative;
+  overflow: hidden;
 }
 
 .awan-kiri {
@@ -43,7 +46,9 @@
   left: -100px;
   width: 700px;
   z-index: 1;
-  overflow: hidden;
+  @include respond-to("phone") {
+    width: 500px;
+  }
 }
 
 .awan-kanan {
@@ -57,10 +62,15 @@
 
 .kembang-api {
   position: absolute;
-  left: -40px;
-  top: -130px;
-  height: 300px;
+  left: 10px;
+  top: -80px;
+  height: 200px;
   z-index: 0;
+  @include respond-to("phone") {
+    height: 120px;
+    top: -45px;
+    left: -10px;
+  }
 }
 
 .majalah {
@@ -73,13 +83,18 @@
   border: none !important;
 }
 
+.modal-backdrop {
+  width: 100% !important;
+  height: 100% !important;
+}
+
 .majalah-pdf {
   margin-top: 5vh;
   img {
     height: 70vh;
-    // width: 30vw;
     margin-top: 10px;
     border: solid black 2px;
+    max-width: 95%;
   }
 }
 
@@ -90,11 +105,21 @@
 }
 
 .doc-button {
-  font-size: 40px !important;
+  color: black;
+  font-size: 30px !important;
   border-radius: 30px;
   margin-top: 20px;
   margin-left: 25px;
   margin-right: 25px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-left: 17px;
+  padding-right: 17px;
+  background-color: $orange-lighter !important;
+}
+
+.dwn-btn {
+  background-color: $orange-lighter !important;
 }
 
 iframe::-webkit-scrollbar {
@@ -110,32 +135,7 @@ footer {
 
 .image-modal {
   width: 50vw;
-  @include respond-to('phone') {
+  @include respond-to("phone") {
     width: 100vw;
   }
-}
-
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-}
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (max-width: 912px) {
-  /*/.header-jumbotron {
-    margin-top: 5vh;
-  }
-
-  .majalah-pdf {
-    margin-top: 5vh;
-    img {
-      height: 60vh;
-      // width: 30vw;
-      margin-top: 10px;
-      border: solid black 2px;
-    }
-  } */
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (max-width: 768px) {
 }
